GitVersion1/objects/Approval_Process_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This custom setting is used in request and account trigger and where ever the account approval needs to be created according to the Business Unit.</description>
    <fields>
        <fullName>Competitor_Update_Approval_Process__c</fullName>
        <description>This holds the name of the Competitor Update Request approval process name</description>
        <label>Competitor Update Approval Process</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competitor_Validation_Approval_Process__c</fullName>
        <description>Holds the name of Competitor Validation Approval process on Account Object</description>
        <label>Competitor Validation Approval Process</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consumer_Validation_Approval_Process__c</fullName>
        <description>This approval process is called whenever the Duplicate record is created and the request needs to be approved by the Data Steward.</description>
        <label>Consumer Validation Approval Process</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Update_Approval_Process__c</fullName>
        <description>This stores the Commercial Customer Update Request Approval Process Name</description>
        <label>Customer Update Approval Process</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lightning_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lightning Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Owner_Change__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Owner Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Prospect_Conversion_Approval_Process__c</fullName>
        <description>This holds the name of Prospect conversion Approval Process name for Acccount</description>
        <label>Prospect Conversion Approval Process</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prospect_Validation_Approval_Process__c</fullName>
        <description>This approval process is called whenever the Duplicate record is created and the request needs to be approved by the Data Steward.</description>
        <label>Prospect Validation Approval Process</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <label>Approval Process Settings</label>
</CustomObject>